[tool.poetry]
name = "mode_wle_signer"
version = "0.1.0"
description = "Signs Mode WLE URLs"
authors = ["Irving Popovetsky <irving@honeycomb.io>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
