[tool.poetry]
name = "mode_wle_signer"
version = "0.1.0"
description = "Signs Mode WLE URLs"
authors = ["Irving Popovetsky <irving@honeycomb.io>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^1.1.2"
opentelemetry-api = "^1.7.1"
opentelemetry-sdk = "^1.7.1"
opentelemetry-exporter-gcp-trace = "^1.0.0"
opentelemetry-instrumentation-flask = "^0.26b1"
markupsafe = "2.0.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
