[tool.poetry]
name = "mode_wle_signer"
version = "0.9.0"
description = "Signs Mode WLE URLs"
authors = ["Irving Popovetsky <irving@honeycomb.io>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">3.11"
python-dotenv = "^0.21.0"
flask = "<4.0.0"
opentelemetry-distro = "^0.46b0"
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-instrumentation-flask = "^0.46b0"
opentelemetry-instrumentation-urllib = "^0.46b0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
